[package]
name = "advent_of_code_2022"
version = "0.1.0"
authors = ["Galen Elias <gelias@gmail.com>"]
edition = "2021"

[dependencies]
regex = "*"
itertools = "*"
lazy_static = "1.4.0"
num = "0.3"
emergence = "1.0.0"
clap = { version = "4.0.29", features = ["derive"] }

[[bin]]
name = "aoc"
path = "src/main.rs"
